<resources>
    <string name="app_name">WebZilla</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="plus">Add</string>
    <string name="profile">Profile</string>
    <string name="now">Register Now</string>
    <string name="User">Username</string>
    <string name="Shop">Shop Name</string>
    <string name="Address">Address</string>
    <string name="number">Phone Number</string>
    <string name="mail">Email</string>
    <string name="Pass">Password</string>
    <string name="Register">Register</string>
    <string name="log">Log In</string>
    <string name="login">Login Now</string>
    <string name="Addimage">add Image</string>
    <string name="Addproduct">Add Product</string>
    <string name="upto">Up to 5 photos</string>
    <string name="productname">Product Name <font color="red">*</font></string>
    <string name="productcategory">Product Category <font color="red">*</font></string>
    <string name="price">Price <font color="red">*</font></string>
    <string name="discountPrice">Discounted Price <font color="red">*</font></string>
    <string name="unit">Product Unit <font color="red">*</font></string>
    <string name="per">Pieces <font color="red">*</font></string>
    <string name="mange">Manage</string>
    <string name="api">Please enter your Shiprocket API user details. You can find it on <u><font color="blue">API configuration page</font></u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AddLogo">Add Logo</string>
    <string name="Edit"><u>Edit Business Detail</u></string>
</resources>