<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:id="@+id/plusFrag"
    tools:context=".Fragment.PlusFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/now"
                android:textColor="#000000"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userRegister"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:hint="@string/User"
                android:textColorHint="@color/box_stroke_color"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:boxStrokeColor="@color/box_stroke_color"
                app:helperTextTextColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:startIconDrawable="@drawable/person"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/shopNameRegister"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:hint="@string/Shop"
                android:textColorHint="@color/box_stroke_color"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:boxStrokeColor="@color/box_stroke_color"
                app:helperTextTextColor="@color/red"
                app:startIconDrawable="@drawable/shop"
                app:layout_constraintEnd_toEndOf="@+id/userRegister"
                app:layout_constraintStart_toStartOf="@+id/userRegister"
                app:layout_constraintTop_toBottomOf="@+id/userRegister"
                app:layout_goneMarginTop="36dp"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shopName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressRegister"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                app:endIconTint="@color/black"
                android:hint="@string/Address"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                android:textColorHint="@color/box_stroke_color"
                app:boxCornerRadiusTopStart="15dp"
                app:boxStrokeColor="@color/box_stroke_color"
                app:helperTextTextColor="@color/red"
                app:startIconDrawable="@drawable/address"
                app:layout_constraintEnd_toEndOf="@+id/shopNameRegister"
                app:layout_constraintHorizontal_bias="0.0"
                android:textColorHighlight="@color/box_stroke_color"
                app:layout_constraintStart_toStartOf="@+id/shopNameRegister"
                app:layout_constraintTop_toBottomOf="@+id/shopNameRegister"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/numberRegister"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:hint="@string/number"
                android:textColorHint="@color/box_stroke_color"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:boxStrokeColor="@color/box_stroke_color"
                app:layout_constraintEnd_toEndOf="@+id/passRegister"
                app:layout_constraintStart_toStartOf="@+id/passRegister"
                app:layout_constraintTop_toBottomOf="@+id/passRegister"
                app:helperTextTextColor="@color/red"
                app:startIconDrawable="@drawable/phone"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <!--            android:textColorHighlight="@color/purple"-->
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mailRegister"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:hint="@string/mail"
                android:textColorHint="@color/box_stroke_color"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:boxStrokeColor="@color/box_stroke_color"
                app:layout_constraintEnd_toEndOf="@+id/addressRegister"
                app:layout_constraintStart_toStartOf="@+id/addressRegister"
                app:layout_constraintTop_toBottomOf="@+id/addressRegister"
                app:helperTextTextColor="@color/red"
                app:startIconDrawable="@drawable/mail"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <!--            android:textColorHighlight="@color/purple"-->
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passRegister"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:hint="@string/Pass"
                android:textColorHint="@color/box_stroke_color"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:boxStrokeColor="@color/box_stroke_color"
                app:layout_constraintEnd_toEndOf="@+id/mailRegister"
                app:layout_constraintStart_toStartOf="@+id/mailRegister"
                app:layout_constraintTop_toBottomOf="@+id/mailRegister"
                app:helperTextTextColor="@color/red"
                app:startIconDrawable="@drawable/lock"
                app:startIconTint="@color/black"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:backgroundTint="@color/white"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/Register"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toStartOf="@+id/logBtn"
                app:layout_constraintHorizontal_bias="0.475"
                app:layout_constraintStart_toStartOf="@+id/numberRegister"
                app:layout_constraintTop_toBottomOf="@+id/numberRegister"
                app:strokeColor="@color/box_stroke_color"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/logBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginEnd="36dp"
                android:backgroundTint="@color/white"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/log"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold"

                app:cornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="@+id/button2"
                app:layout_constraintEnd_toEndOf="@+id/numberRegister"
                app:layout_constraintTop_toTopOf="@+id/button2"
                app:strokeColor="@color/box_stroke_color"
                app:strokeWidth="2dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>